--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <section class="home" id="home">
-            <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA!</h1>
+            <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA</h1>
             <a href="/menu/menu.html" target="_blank">Scopri il menù</a>
         </section>
 
