--- a/menu/menu.html
+++ b/menu/menu.html
@@ -17,7 +17,7 @@
                 <li class="list" data-filter="hamburger">I nostri hamburger</li>
                 <li class="list" data-filter="crostini">I nostri crostini</li>
                 <li class="list" data-filter="insalate">Insalate</li>
-                <li class="list" data-filter="bibite">Bibite e virgins</li>
+                <li class="list" data-filter="bibite&virgins">Bibite e virgins</li>
                 <li class="list" data-filter="birrespina">Birre alla spina</li>
                 <li class="list" data-filter="inbottiglia">In bottiglia</li>
                 <li class="list" data-filter="sommergibile">Sommergibile (piccola/media)</li>
@@ -103,10 +103,166 @@
                 </div>
 
                 <!-- I nostri hamburger -->
-                <div class="itemBox" data-item="...">
-                    <h3>...</h3>
-                    <p>...</p>
-                    <p>Prezzo: €...</p>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Malt & Hops Giant + Patate fritte</h3>
+                    <p>200g di carne di angus, bacon croccante, fontina, cipolla caramellata, pomodoro, lattuga, maionese, ketchup</p>
+                    <p>Prezzo: €12.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Giant bacon cheese + Patate fritte</h3>
+                    <p>200g di carne di angus, bacon croccante, fontina, lattuga, salsa barbeque</p>
+                    <p>Prezzo: €12.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Giant Kikki + Patate fritte</h3>
+                    <p>200g di carne di angus, pomodoro, lattuga, salsa piccante</p>
+                    <p>Prezzo: €12.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Lovo burger + Patate fritte</h3>
+                    <p>Straccetti di maiale speziati, cipolla caramellata, uvetta, salsa barbeque</p>
+                    <p>Prezzo: €13.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Hot dog</h3>
+                    <p>Würstel, senape, maionese, ketchup</p>
+                    <p>Prezzo: €5.00</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Super dog</h3>
+                    <p>Würstel, cipolla caramellata, lattuga, maionese, ketchup</p>
+                    <p>Prezzo: €5.50</p>
+                </div>
+                <div class="itemBox" data-item="hamburger">
+                    <h3>Chilly dog</h3>
+                    <p>Würstel, fontina, chilly, senape</p>
+                    <p>Prezzo: €5.50</p>
+                </div>
+
+                <!-- I nostri crostini -->
+                <div class="itemBox" data-item="crostini">
+                    <h3>Fornarina</h3>
+                    <p>Sale, olio, rosmarino</p>
+                    <p>Prezzo: €7.50</p>
+                </div>
+                <div class="itemBox" data-item="crostini">
+                    <h3>Margherita</h3>
+                    <p>Pomodoro e mozzarella</p>
+                    <p>Prezzo: €8.00</p>
+                </div>
+                <div class="itemBox" data-item="crostini">
+                    <h3>Vegetariana</h3>
+                    <p>Rossa con verdure alla griglia</p>
+                    <p>Prezzo: €10.00</p>
+                </div>
+                <div class="itemBox" data-item="crostini">
+                    <h3>Fornarina al crudo</h3>
+                    <p>Sale, olio, rosmarino, prosciutto crudo</p>
+                    <p>Prezzo: €10.00</p>
+                </div>
+                <div class="itemBox" data-item="crostini">
+                    <h3>Diavola</h3>
+                    <p>Pomodoro, mozzarella, salame piccante</p>
+                    <p>Prezzo: €10.00</p>
+                </div>
+                <div class="itemBox" data-item="crostini">
+                    <h3>Red king</h3>
+                    <p>Funghi, salsiccia, grana</p>
+                    <p>Prezzo: €10.00</p>
+                </div>
+                <div class="itemBox" data-item="crostini">
+                    <h3>Sherlock holemes</h3>
+                    <p>Speck, gorgonzola</p>
+                    <p>Prezzo: €10.00</p>
+                </div>
+                <div class="itemBox" data-item="crostini">
+                    <h3>Campagnolo</h3>
+                    <p>Pancetta croccante, grana, rucola, aceto balsamico</p>
+                    <p>Prezzo: €12.00</p>
+                </div>
+
+                <!-- Insalate -->
+                <div class="itemBox" data-item="insalate">
+                    <h3>Insalata estate</h3>
+                    <p>Tonno, lattuga, cipolla, pomodoro, olive nere</p>
+                    <p>Prezzo: €8.00</p>
+                </div>
+                <div class="itemBox" data-item="insalate">
+                    <h3>Insalata adriatica</h3>
+                    <p>Lattuga, pomodoro, mozzarella, carote, prosciutto cotto</p>
+                    <p>Prezzo: €8.00</p>
+                </div>
+                <div class="itemBox" data-item="insalate">
+                    <h3>Insalata gold</h3>
+                    <p>A fantasia della cucina</p>
+                    <p>Prezzo: €9.00</p>
+                </div>
+
+                <!-- Bibite e virgins -->
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Coca cola</h3>
+                    <p></p>
+                    <p>Prezzo: €3.50</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Fanta</h3>
+                    <p></p>
+                    <p>Prezzo: €3.50</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Lemon</h3>
+                    <p></p>
+                    <p>Prezzo: €3.50</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Acqua tonica</h3>
+                    <p></p>
+                    <p>Prezzo: €3.50</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>The freddo</h3>
+                    <p>Limone o Pesca</p>
+                    <p>Prezzo: €3.50</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Coca zero in lattina</h3>
+                    <p></p>
+                    <p>Prezzo: €3.50</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Succhi di frutta</h3>
+                    <p>Ananas/Arancia/Pesca/Pera/ACE</p>
+                    <p>Prezzo: €3.00</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Acqua</h3>
+                    <p>(1/2 Litro) Naturale/Frizzante</p>
+                    <p>Prezzo: €2.00</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Red bull</h3>
+                    <p></p>
+                    <p>Prezzo: €4.00</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Analcolico alla frutta</h3>
+                    <p>A fantasia del barista</p>
+                    <p>Prezzo: €6.00</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Virgin mojito</h3>
+                    <p>Zucchero, lime, menta, soda</p>
+                    <p>Prezzo: €6.00</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Virgin colada</h3>
+                    <p>Ananas, cocco</p>
+                    <p>Prezzo: €6.00</p>
+                </div>
+                <div class="itemBox" data-item="bibite&virgins">
+                    <h3>Virgin caipiroska</h3>
+                    <p>Zucchero, lime, soda <br>(su richiesta aggiunta di fragola/papaya)</p>
+                    <p>Prezzo: €6.00</p>
                 </div>
             </div>
         </section>
