--- a/menu/menu.html
+++ b/menu/menu.html
@@ -37,232 +37,232 @@
                 <div class="itemBox" data-item="malt">
                     <h3>Fuori menu (primi e secondi)</h3>
                     <p>Cambiano periodicamente. Chiedete allo staff.</p>
-                    <p>Prezzo: Da €9.00 a €22.00</p>
+                    <p>Prezzo: Da &euro;9.00 a &euro;22.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>Golosone</h3>
                     <p>Würstel e patate fritte</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>Americano</h3>
                     <p>250g di hamburger di angus e patate fritte</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>Contadino</h3>
                     <p>Spiedini di pollo alla brace e patate fritte</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>Regaz</h3>
                     <p>Cotoletta casalinga con patate fritte</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>Troppo buono</h3>
                     <p>Salsiccia alla griglia e patate fritte</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
 
                 <!-- Toast amerigani -->
                 <div class="itemBox" data-item="toast">
                     <h3>Bobbie's</h3>
                     <p>Prosciutto crudo, mozzarella, maionese</p>
-                    <p>Prezzo: €6.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="toast">
                     <h3>H.Park</h3>
                     <p>Prosciutto crudo, fontina, lattuga, maionese</p>
-                    <p>Prezzo: €6.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="toast">
                     <h3>Piccadilly</h3>
                     <p>Lattuga, fontina, salame</p>
-                    <p>Prezzo: €6.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="toast">
                     <h3>Underground</h3>
                     <p>Tonno, cipolla, maionese</p>
-                    <p>Prezzo: €6.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="toast">
                     <h3>Nelson</h3>
                     <p>Cotto, funghi, maionese</p>
-                    <p>Prezzo: €6.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="toast">
                     <h3>Fianagan</h3>
                     <p>Mozzarella, funghi, melanzane</p>
-                    <p>Prezzo: €6.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="toast">
                     <h3>Trafalgar</h3>
                     <p>Pomodoro, mozzarella, origano</p>
-                    <p>Prezzo: €6.50</p>
+                    <p>Prezzo: &euro;6.50</p>
                 </div>
 
                 <!-- I nostri hamburger -->
                 <div class="itemBox" data-item="hamburger">
                     <h3>Malt & Hops Giant + Patate fritte</h3>
                     <p>200g di carne di angus, bacon croccante, fontina, cipolla caramellata, pomodoro, lattuga, maionese, ketchup</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Giant bacon cheese + Patate fritte</h3>
                     <p>200g di carne di angus, bacon croccante, fontina, lattuga, salsa barbeque</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Giant Kikki + Patate fritte</h3>
                     <p>200g di carne di angus, pomodoro, lattuga, salsa piccante</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Lovo burger + Patate fritte</h3>
                     <p>Straccetti di maiale speziati, cipolla caramellata, uvetta, salsa barbeque</p>
-                    <p>Prezzo: €13.00</p>
+                    <p>Prezzo: &euro;13.00</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Hot dog</h3>
                     <p>Würstel, senape, maionese, ketchup</p>
-                    <p>Prezzo: €5.00</p>
+                    <p>Prezzo: &euro;5.00</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Super dog</h3>
                     <p>Würstel, cipolla caramellata, lattuga, maionese, ketchup</p>
-                    <p>Prezzo: €5.50</p>
+                    <p>Prezzo: &euro;5.50</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Chilly dog</h3>
                     <p>Würstel, fontina, chilly, senape</p>
-                    <p>Prezzo: €5.50</p>
+                    <p>Prezzo: &euro;5.50</p>
                 </div>
 
                 <!-- I nostri crostini -->
                 <div class="itemBox" data-item="crostini">
                     <h3>Fornarina</h3>
                     <p>Sale, olio, rosmarino</p>
-                    <p>Prezzo: €7.50</p>
+                    <p>Prezzo: &euro;7.50</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Margherita</h3>
                     <p>Pomodoro e mozzarella</p>
-                    <p>Prezzo: €8.00</p>
+                    <p>Prezzo: &euro;8.00</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Vegetariana</h3>
                     <p>Rossa con verdure alla griglia</p>
-                    <p>Prezzo: €10.00</p>
+                    <p>Prezzo: &euro;10.00</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Fornarina al crudo</h3>
                     <p>Sale, olio, rosmarino, prosciutto crudo</p>
-                    <p>Prezzo: €10.00</p>
+                    <p>Prezzo: &euro;10.00</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Diavola</h3>
                     <p>Pomodoro, mozzarella, salame piccante</p>
-                    <p>Prezzo: €10.00</p>
+                    <p>Prezzo: &euro;10.00</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Red king</h3>
                     <p>Funghi, salsiccia, grana</p>
-                    <p>Prezzo: €10.00</p>
+                    <p>Prezzo: &euro;10.00</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Sherlock holemes</h3>
                     <p>Speck, gorgonzola</p>
-                    <p>Prezzo: €10.00</p>
+                    <p>Prezzo: &euro;10.00</p>
                 </div>
                 <div class="itemBox" data-item="crostini">
                     <h3>Campagnolo</h3>
                     <p>Pancetta croccante, grana, rucola, aceto balsamico</p>
-                    <p>Prezzo: €12.00</p>
+                    <p>Prezzo: &euro;12.00</p>
                 </div>
 
                 <!-- Insalate -->
                 <div class="itemBox" data-item="insalate">
                     <h3>Insalata estate</h3>
                     <p>Tonno, lattuga, cipolla, pomodoro, olive nere</p>
-                    <p>Prezzo: €8.00</p>
+                    <p>Prezzo: &euro;8.00</p>
                 </div>
                 <div class="itemBox" data-item="insalate">
                     <h3>Insalata adriatica</h3>
                     <p>Lattuga, pomodoro, mozzarella, carote, prosciutto cotto</p>
-                    <p>Prezzo: €8.00</p>
+                    <p>Prezzo: &euro;8.00</p>
                 </div>
                 <div class="itemBox" data-item="insalate">
                     <h3>Insalata gold</h3>
                     <p>A fantasia della cucina</p>
-                    <p>Prezzo: €9.00</p>
+                    <p>Prezzo: &euro;9.00</p>
                 </div>
 
                 <!-- Bibite e virgins -->
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Coca cola</h3>
                     <p></p>
-                    <p>Prezzo: €3.50</p>
+                    <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Fanta</h3>
                     <p></p>
-                    <p>Prezzo: €3.50</p>
+                    <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Lemon</h3>
                     <p></p>
-                    <p>Prezzo: €3.50</p>
+                    <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Acqua tonica</h3>
                     <p></p>
-                    <p>Prezzo: €3.50</p>
+                    <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>The freddo</h3>
                     <p>Limone o Pesca</p>
-                    <p>Prezzo: €3.50</p>
+                    <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Coca zero in lattina</h3>
                     <p></p>
-                    <p>Prezzo: €3.50</p>
+                    <p>Prezzo: &euro;3.50</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Succhi di frutta</h3>
                     <p>Ananas/Arancia/Pesca/Pera/ACE</p>
-                    <p>Prezzo: €3.00</p>
+                    <p>Prezzo: &euro;3.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Acqua</h3>
                     <p>(1/2 Litro) Naturale/Frizzante</p>
-                    <p>Prezzo: €2.00</p>
+                    <p>Prezzo: &euro;2.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Red bull</h3>
                     <p></p>
-                    <p>Prezzo: €4.00</p>
+                    <p>Prezzo: &euro;4.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Analcolico alla frutta</h3>
                     <p>A fantasia del barista</p>
-                    <p>Prezzo: €6.00</p>
+                    <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Virgin mojito</h3>
                     <p>Zucchero, lime, menta, soda</p>
-                    <p>Prezzo: €6.00</p>
+                    <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Virgin colada</h3>
                     <p>Ananas, cocco</p>
-                    <p>Prezzo: €6.00</p>
+                    <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="bibite&virgins">
                     <h3>Virgin caipiroska</h3>
                     <p>Zucchero, lime, soda <br>(su richiesta aggiunta di fragola/papaya)</p>
-                    <p>Prezzo: €6.00</p>
+                    <p>Prezzo: &euro;6.00</p>
                 </div>
             </div>
         </section>
