--- a/menu/menu.html
+++ b/menu/menu.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Menù - Malt & Hops Pub Bologna</title>
+        <title>Men&ugrave; - Malt & Hops Pub Bologna</title>
         <link rel="stylesheet" href="./style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="title">
-            <h1>MENÙ</h1>
+            <h1>MEN&Ugrave;</h1>
         </div>
         <section>
             <ul>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="itemBox" data-item="malt">
                     <h3>Golosone</h3>
-                    <p>Würstel e patate fritte</p>
+                    <p>W&uuml;rstel e patate fritte</p>
                     <p>Prezzo: &euro;12.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
@@ -125,17 +125,17 @@
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Hot dog</h3>
-                    <p>Würstel, senape, maionese, ketchup</p>
+                    <p>W&uuml;rstel, senape, maionese, ketchup</p>
                     <p>Prezzo: &euro;5.00</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Super dog</h3>
-                    <p>Würstel, cipolla caramellata, lattuga, maionese, ketchup</p>
+                    <p>W&uuml;rstel, cipolla caramellata, lattuga, maionese, ketchup</p>
                     <p>Prezzo: &euro;5.50</p>
                 </div>
                 <div class="itemBox" data-item="hamburger">
                     <h3>Chilly dog</h3>
-                    <p>Würstel, fontina, chilly, senape</p>
+                    <p>W&uuml;rstel, fontina, chilly, senape</p>
                     <p>Prezzo: &euro;5.50</p>
                 </div>
 
