--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <section class="home" id="home">
             <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA</h1>
-            <a href="/menu/menu.html" target="_blank">Scopri il menù</a>
+            <a href="/menu/menu.html" target="_blank">Scopri il men&ugrave;</a>
         </section>
 
         <!-- Navbar -->
@@ -29,9 +29,9 @@
             </div>
             <div class="content">
                 <p>
-                  Malt & Hops è nato dallal passione per la buona cucina e l'amore per la cultura nerd.
+                  Malt & Hops &egrave; nato dallal passione per la buona cucina e l'amore per la cultura nerd.
                   Situato nel cuore di Bologna, offriamo un ambiente accogliente dove gustare piatti italiani autentici e birre artigianali di alta qualità.
-                  Il nostro ristorante è il luogo ideale per famiglie, amici e appassionati che cercano un'esperienza culinaria unica. 
+                  Il nostro ristorante &egrave; il luogo ideale per famiglie, amici e appassionati che cercano un'esperienza culinaria unica. 
                   Con serate a tema e un'atmosfera solare, ci impegniamo a rendere ogni visita speciale.
                 </p>
             </div>
@@ -48,23 +48,23 @@
                         <h2>SHOP</h2>
                     </div>
                     <div class="testoS">
-                        <p>Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum è considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
+                        <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
                     </div>
                     <div class="ctaS">
-                        <a href="#">Scopri di più</a>
+                        <a href="#">Scopri di pi&ugrave;</a>
                     </div>
                 </div>
 
                 <div class="s" id="servizio2">
                     <div class="immagineS"></div>
                     <div class="titoloS">
-                        <h2>MENÙ</h2>
+                        <h2>MEN&Ugrave;</h2>
                     </div>
                     <div class="testoS">
-                        <p>Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum è considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
+                        <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
                     </div>
                     <div class="ctaS">
-                        <a href="./menu/menu.html" target="_blank">Scopri di più</a>
+                        <a href="./menu/menu.html" target="_blank">Scopri di pi&ugrave;</a>
                     </div>
                 </div>
 
@@ -74,10 +74,10 @@
                         <h2>EVENTI</h2>
                     </div>
                     <div class="testoS">
-                        <p>Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum è considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
+                        <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
                     </div>
                     <div class="ctaS">
-                        <a href="./eventi/eventi.html" target="_blank">Scopri di più</a>
+                        <a href="./eventi/eventi.html" target="_blank">Scopri di pi&ugrave;</a>
                     </div>
                 </div>
             </div>
