--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="content">
                 <p>
                   Malt & Hops &egrave; nato dallal passione per la buona cucina e l'amore per la cultura nerd.
-                  Situato nel cuore di Bologna, offriamo un ambiente accogliente dove gustare piatti italiani autentici e birre artigianali di alta qualità.
+                  Situato nel cuore di Bologna, offriamo un ambiente accogliente dove gustare piatti italiani autentici e birre artigianali di alta qualit&agrave;.
                   Il nostro ristorante &egrave; il luogo ideale per famiglie, amici e appassionati che cercano un'esperienza culinaria unica. 
                   Con serate a tema e un'atmosfera solare, ci impegniamo a rendere ogni visita speciale.
                 </p>
