--- a/menu/menu.html
+++ b/menu/menu.html
@@ -264,6 +264,14 @@
                     <p>Zucchero, lime, soda <br>(su richiesta aggiunta di fragola/papaya)</p>
                     <p>Prezzo: &euro;6.00</p>
                 </div>
+
+                <!-- ... -->
+                <div class="itemBox" data-item=" ">
+                    <h3></h3>
+                    <p></p>
+                    <p>Prezzo: &euro;</p>
+                </div>
+
             </div>
         </section>
         <script src="./script.js"></script>
