--- a/menu/menu.html
+++ b/menu/menu.html
@@ -265,13 +265,60 @@
                     <p>Prezzo: &euro;6.00</p>
                 </div>
 
-                <!-- ... -->
-                <div class="itemBox" data-item=" ">
-                    <h3></h3>
-                    <p></p>
-                    <p>Prezzo: &euro;</p>
+                <!-- Sommergibile (piccola/media) -->
+                <div class="itemBox" data-item="sommergibile">
+                    <h3>Sandy line</h3>
+                    <p>Acqua tonica e birra chiara</p>
+                    <p>Prezzo: &euro;3.50/&euro;5.00</p>
                 </div>
-
+                <div class="itemBox" data-item="sommergibile">
+                    <h3>Radler</h3>
+                    <p>Lemon e birra chiara</p>
+                    <p>Prezzo: &euro;3.50/&euro;5.00</p>
+                </div>
+                <div class="itemBox" data-item="sommergibile">
+                    <h3>Snake bite</h3>
+                    <p>Sidro e birra chiara</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.00</p>
+                </div>
+                <div class="itemBox" data-item="sommergibile">
+                    <h3>Birra verde</h3>
+                    <p>Ricetta segreta</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.00</p>
+                </div>
+                <div class="itemBox" data-item="sommergibile">
+                    <h3>Mexicano</h3>
+                    <p>Tequila e birra chiara</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50</p>
+                </div>
+                <div class="itemBox" data-item="sommergibile">
+                    <h3>Cubano</h3>
+                    <p>Rum e birra chiara</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50</p>
+                </div>
+                <div class="itemBox" data-item="sommergibile">
+                    <h3>Katiuscha</h3>
+                    <p>Vodka e birra chiara</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50</p>
+                </div>
+                <div class="itemBox" data-item="sommergibile">
+                    <h3>Cica</h3>
+                    <p>Limoncello e weiss</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.00</p>
+                </div>
+                
+                <!-- Sommergibile (piccola/media) -->
+                <div class="itemBox" data-item="vini">
+                    <h3>Bianchi/Rossi/Prosecco</h3>
+                    <p>Calice</p>
+                    <p>Prezzo: &euro;5.50</p>
+                </div>
+                <div class="itemBox" data-item="vini">
+                    <h3>Bianchi/Rossi/Prosecco</h3>
+                    <p>Bottiglia</p>
+                    <p>Prezzo: &euro;20.00/&euro;22.00/&euro;25.00</p>
+                </div>
+                
             </div>
         </section>
         <script src="./script.js"></script>
