--- a/menu/menu.html
+++ b/menu/menu.html
@@ -307,7 +307,7 @@
                     <p>Prezzo: &euro;4.00/&euro;6.00</p>
                 </div>
                 
-                <!-- Sommergibile (piccola/media) -->
+                <!-- Vini -->
                 <div class="itemBox" data-item="vini">
                     <h3>Bianchi/Rossi/Prosecco</h3>
                     <p>Calice</p>
