--- a/menu/menu.html
+++ b/menu/menu.html
@@ -457,6 +457,68 @@
                     <p>Arancia, Campari, soda</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
+                <!-- Cicchetti -->
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Angel</h3>
+                    <p>Kahlúa, Baileys</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Cammello</h3>
+                    <p>Cachaça, arancia</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Cervelletto</h3>
+                    <p>Vodka, granatina, Baileys, amaretto Di Saronno</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Cucaracha</h3>
+                    <p>Tequila, rum , Kahlúa</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Orgasmo</h3>
+                    <p>Vodka, vodka alla pesca, granatina</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Puffo</h3>
+                    <p>Rum, batida, vodka blu</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Puma</h3>
+                    <p>Vodka, Baileys, Kahlúa</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Torello</h3>
+                    <p>Tequila, Kahlúa</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Tropical</h3>
+                    <p>Granatina, Batida, vodka blu</p>
+                    <p>Prezzo: &euro;2.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Tequila sale e limone</h3>
+                    <p>Tequila, sale, limone (ovviamente)</p>
+                    <p>Prezzo: &euro;3.50</p>
+                </div>
+                <div class="itemBox" data-item="cicchetti">
+                    <h3>Waikiki</h3>
+                    <p>Bicchierino di rum scuro e bicchierino di succo di pera</p>
+                    <p>Prezzo: &euro;3.50</p>
+                </div>
+                   <div class="itemBox" data-item="cicchetti">
+                    <h3>A fantasia del barista</h3>
+                    <p>*Per la gloria*</p>
+                    <p>Prezzo: &euro;3.50</p>
+                </div>
+                
                 
             </div>
         </section>
