--- a/menu/menu.html
+++ b/menu/menu.html
@@ -11,25 +11,25 @@
         </div>
         <section>
             <ul>
-                <li class="list active" data-filter="all">Tutti</li>
-                <li class="list" data-filter="malt">I piatti del Malt</li>
-                <li class="list" data-filter="toast">Toast amerigani</li>
-                <li class="list" data-filter="hamburger">I nostri hamburger</li>
-                <li class="list" data-filter="crostini">I nostri crostini</li>
-                <li class="list" data-filter="insalate">Insalate</li>
-                <li class="list" data-filter="bibite&virgins">Bibite e virgins</li>
-                <li class="list" data-filter="birrespina">Birre alla spina</li>
+                <li class="list active" data-filter="all">Tutti</li> 
+                <li class="list" data-filter="malt">I piatti del Malt</li> 
+                <li class="list" data-filter="toast">Toast amerigani</li> 
+                <li class="list" data-filter="hamburger">I nostri hamburger</li> 
+                <li class="list" data-filter="crostini">I nostri crostini</li> 
+                <li class="list" data-filter="insalate">Insalate</li> 
+                <li class="list" data-filter="bibite&virgins">Bibite e virgins</li> 
+                <li class="list" data-filter="birrespina">Birre alla spina</li> 
                 <li class="list" data-filter="inbottiglia">In bottiglia</li>
-                <li class="list" data-filter="sommergibile">Sommergibile (piccola/media)</li>
-                <li class="list" data-filter="vini">Vini</li>
-                <li class="list" data-filter="cocktail">Cocktail</li>
-                <li class="list" data-filter="pestati">Pestati con zucchero e lime</li>
-                <li class="list" data-filter="cicchetti">Cicchetti</li>
-                <li class="list" data-filter="digestivi">Digestivi</li>
-                <li class="list" data-filter="coffeshop">Coffe shop</li>
-                <li class="list" data-filter="piadine">Piadine</li>
-                <li class="list" data-filter="crescente">Crescente farcite</li>
-                <li class="list" data-filter="fritti">I fritti e non solo</li>
+                <li class="list" data-filter="sommergibile">Sommergibile (piccola/media)</li> 
+                <li class="list" data-filter="vini">Vini</li> 
+                <li class="list" data-filter="cocktail">Cocktail</li> 
+                <li class="list" data-filter="pestati">Pestati con zucchero e lime</li> 
+                <li class="list" data-filter="cicchetti">Cicchetti</li> 
+                <li class="list" data-filter="digestivi">Digestivi</li> 
+                <li class="list" data-filter="coffeshop">Coffe shop</li> 
+                <li class="list" data-filter="piadine">Piadine</li> 
+                <li class="list" data-filter="crescente">Crescente farcite</li> 
+                <li class="list" data-filter="fritti">I fritti e non solo</li> 
             </ul>
             <div class="product">
 
@@ -265,6 +265,60 @@
                     <p>Prezzo: &euro;6.00</p>
                 </div>
 
+                <!-- Birre alla spina -->
+                <div class="itemBox" data-item="birrespina">
+                    <h3>Harp (5%)</h3>
+                    <p>Piccola/Media/Boccale/Caraffa</p>
+                    <p>Prezzo: &euro;4.00/&euro;5.50/&euro;11.00/&euro;18.00</p>
+                </div>
+                <div class="itemBox" data-item="birrespina">
+                    <h3>Dolomiti (5.4%)</h3>
+                    <p>Piccola/Media/Boccale/Caraffa</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.00/&euro;12.00/&euro;18.00</p>
+                </div>
+                <div class="itemBox" data-item="birrespina">
+                    <h3>Tennet's super (9%)</h3>
+                    <p>Piccola/Media/Boccale/Caraffa</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.00/&euro;12.00/&euro;18.00</p>
+                </div>
+                <div class="itemBox" data-item="birrespina">
+                    <h3>London Pride (4.7%)</h3>
+                    <p>Piccola/Media/Boccale/Caraffa</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50/&euro;13.00/&euro;18.50</p>
+                </div>
+                <div class="itemBox" data-item="birrespina">
+                    <h3>Paulaner Weiss (5.5%)</h3>
+                    <p>Piccola/Media/Boccale/Caraffa</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50/&euro;13.00/&euro;18.50</p>
+                </div>
+                <div class="itemBox" data-item="birrespina">
+                    <h3>Guinnes (4.2%)</h3>
+                    <p>Piccola/Media/Boccale/Caraffa</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50/&euro;13.00/&euro;18.50</p>
+                </div>
+
+                <!-- In bottiglia -->
+                <div class="itemBox" data-item="inbottiglia">
+                    <h3>Corona 0.33L</h3>
+                    <p></p>
+                    <p>Prezzo: &euro;5.00</p>
+                </div>
+                <div class="itemBox" data-item="inbottiglia">
+                    <h3>Ichnusa non filtrata 0.5L</h3>
+                    <p></p>
+                    <p>Prezzo: &euro;5.00</p>
+                </div>
+                <div class="itemBox" data-item="inbottiglia">
+                    <h3>Sidro 0.5L</h3>
+                    <p></p>
+                    <p>Prezzo: &euro;7.00</p>
+                </div>
+                <div class="itemBox" data-item="inbottiglia">
+                    <h3>Birra analcolica/Senza glutine 0.33L</h3>
+                    <p></p>
+                    <p>Prezzo: &euro;5.00</p>
+                </div>
+
                 <!-- Sommergibile (piccola/media) -->
                 <div class="itemBox" data-item="sommergibile">
                     <h3>Sandy line</h3>
@@ -457,6 +511,7 @@
                     <p>Arancia, Campari, soda</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
+
                 <!-- Cicchetti -->
                 <div class="itemBox" data-item="cicchetti">
                     <h3>Angel</h3>
@@ -560,6 +615,7 @@
                     <p></p>
                     <p>Prezzo: &euro;8.00</p>
                 </div>
+
                 <!-- Coffe shop -->
                 <div class="itemBox" data-item="coffeshop">
                     <h3>Caffè espresso/corretto</h3>
@@ -752,8 +808,6 @@
                     <p></p>
                     <p>Prezzo: &euro;4.00</p>
                 </div>
-                
-                
             </div>
         </section>
         <script src="./script.js"></script>
