--- a/menu/menu.html
+++ b/menu/menu.html
@@ -456,12 +456,12 @@
                 </div>
                 <div class="itemBox" data-item="cocktail">
                     <h3>Baby doll</h3>
-                    <p>Malibù, ananas. arancia. fragola</p>
+                    <p>Malib&ugrave;, ananas. arancia. fragola</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="cocktail">
                     <h3>Black russian</h3>
-                    <p>Vodka, kahlúa</p>
+                    <p>Vodka, kahl&uacute;a</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                  <div class="itemBox" data-item="cocktail">
@@ -481,11 +481,11 @@
                 </div>
                  <div class="itemBox" data-item="cocktail">
                     <h3>Disaronno colada</h3>
-                    <p>Ananas, cocco, amaretto Di Saronno</p>
+                    <p>Ananas, cocco, Amaretto Di Saronno</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 
-                <!-- Pestati -->
+                <!-- Pestati con zucchero e lime -->
                 <div class="itemBox" data-item="pestati">
                     <h3>Mojito</h3>
                     <p>menta, rum</p>
@@ -498,7 +498,7 @@
                 </div>
                 <div class="itemBox" data-item="pestati">
                     <h3>Caipirinha</h3>
-                    <p>Cachaça</p>
+                    <p>Cacha&ccedil;a</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="pestati">
@@ -515,22 +515,22 @@
                 <!-- Cicchetti -->
                 <div class="itemBox" data-item="cicchetti">
                     <h3>Angel</h3>
-                    <p>Kahlúa, Baileys</p>
+                    <p>Kahl&uacute;a, Baileys</p>
                     <p>Prezzo: &euro;2.50</p>
                 </div>
                 <div class="itemBox" data-item="cicchetti">
                     <h3>Cammello</h3>
-                    <p>Cachaça, arancia</p>
+                    <p>Cacha&ccedil;a, arancia</p>
                     <p>Prezzo: &euro;2.50</p>
                 </div>
                 <div class="itemBox" data-item="cicchetti">
                     <h3>Cervelletto</h3>
-                    <p>Vodka, granatina, Baileys, amaretto Di Saronno</p>
+                    <p>Vodka, granatina, Baileys, Amaretto Di Saronno</p>
                     <p>Prezzo: &euro;2.50</p>
                 </div>
                 <div class="itemBox" data-item="cicchetti">
                     <h3>Cucaracha</h3>
-                    <p>Tequila, rum , Kahlúa</p>
+                    <p>Tequila, rum , Kahl&uacute;a</p>
                     <p>Prezzo: &euro;2.50</p>
                 </div>
                 <div class="itemBox" data-item="cicchetti">
@@ -545,12 +545,12 @@
                 </div>
                 <div class="itemBox" data-item="cicchetti">
                     <h3>Puma</h3>
-                    <p>Vodka, Baileys, Kahlúa</p>
+                    <p>Vodka, Baileys, Kahl&uacute;a</p>
                     <p>Prezzo: &euro;2.50</p>
                 </div>
                 <div class="itemBox" data-item="cicchetti">
                     <h3>Torello</h3>
-                    <p>Tequila, Kahlúa</p>
+                    <p>Tequila, Kahl&uacute;a</p>
                     <p>Prezzo: &euro;2.50</p>
                 </div>
                 <div class="itemBox" data-item="cicchetti">
@@ -592,7 +592,7 @@
                 </div>
                 <div class="itemBox" data-item="digestivi">
                     <h3>Amari</h3>
-                    <p>Nocino/Montenegro/Jägermeister/Averna/amaretto Di Saronno/sambuca/fernet Branca/Branca menta/mirto/Amaro del Capo/Braulio/Unicum</p>
+                    <p>Nocino/Montenegro/J&auml;germeister/Averna/amaretto Di Saronno/sambuca/fernet Branca/Branca menta/mirto/Amaro del Capo/Braulio/Unicum</p>
                     <p>Prezzo: &euro;4.00</p>
                 </div>
                 <div class="itemBox" data-item="digestivi">
@@ -618,23 +618,23 @@
 
                 <!-- Coffe shop -->
                 <div class="itemBox" data-item="coffeshop">
-                    <h3>Caffè espresso/corretto</h3>
+                    <h3>Caff&egrave; espresso/corretto</h3>
                     <p></p>
                     <p>Prezzo: &euro;1.50/&euro;2.00</p>
                 </div>
                 <div class="itemBox" data-item="coffeshop">
                     <h3>Montebianco</h3>
-                    <p>Caffè/panna montata/cacao</p>
+                    <p>Caff&egrave;/panna montata/cacao</p>
                     <p>Prezzo: &euro;3.00</p>
                 </div>
                 <div class="itemBox" data-item="coffeshop">
-                    <h3>Caffè shakerato</h3>
+                    <h3>Caff&egrave; shakerato</h3>
                     <p></p>
                     <p>Prezzo: &euro;4.00</p>
                 </div>
                 <div class="itemBox" data-item="coffeshop">
-                    <h3>caffè shakerato e Baileys</h3>
-                    <p>Caffè,panna montata,cacao</p>
+                    <h3>Caff&egrave; shakerato e Baileys</h3>
+                    <p>Caff&egrave;,panna montata,cacao</p>
                     <p>Prezzo: &euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="coffeshop">
@@ -649,12 +649,12 @@
                 </div>
                 <div class="itemBox" data-item="coffeshop">
                     <h3>Irish coffe</h3>
-                    <p>Caffè espresso, irish whisky, zucchero, panna</p>
+                    <p>Caff&egrave; espresso, irish whisky, zucchero, panna</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="coffeshop">
                     <h3>Bailyes coffe</h3>
-                    <p>Caffè espresso, Bailyes, zucchero, panna</p>
+                    <p>Caff&egrave; espresso, Bailyes, zucchero, panna</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 
@@ -734,12 +734,12 @@
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="fritti">
-                    <h3>Polenta fritta con ragù bianco di salsiccia</h3>
+                    <h3>Polenta fritta con rag&ugrave; bianco di salsiccia</h3>
                     <p></p>
                     <p>Prezzo: &euro;8.00</p>
                 </div>
                 <div class="itemBox" data-item="fritti">
-                    <h3>Jalapeños</h3>
+                    <h3>Jalape&ntilde;os</h3>
                     <p>Con salsa piccante</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
