--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <section class="home" id="home">
-            <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA!</h1>
+            <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA</h1>
             <a href="/menu/menu.html" target="_blank">Scopri il men&ugrave;</a>
         </section>
 
@@ -51,7 +51,7 @@
                         <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
                     </div>
                     <div class="ctaS">
-                        <a href="#">Scopri di pi&ugrave;</a>
+                        <a href="./shop/shop.html" target="_blank">Scopri di pi&ugrave;</a>
                     </div>
                 </div>
 
