--- a/shop/shop.html
+++ b/shop/shop.html
@@ -11,7 +11,7 @@
         </div>
         <section>
             <div class="construction-message">
-                <h2>Il nostro shop è in arrivo!</h2>
+                <h2>Il nostro shop &egrave; in arrivo!</h2>
                 <p>Stiamo preparando qualcosa di speciale per te. Torna a trovarci presto!</p>
             </div>
         </section>
