--- a/menu/menu.html
+++ b/menu/menu.html
@@ -19,7 +19,7 @@
                 <li class="list" data-filter="insalate">Insalate</li> 
                 <li class="list" data-filter="bibite&virgins">Bibite e virgins</li> 
                 <li class="list" data-filter="birrespina">Birre alla spina</li> 
-                <li class="list" data-filter="inbottiglia">In bottiglia</li>
+                <li class="list" data-filter="inbottiglia">Birre In bottiglia</li>
                 <li class="list" data-filter="sommergibile">Sommergibile (piccola/media)</li> 
                 <li class="list" data-filter="vini">Vini</li> 
                 <li class="list" data-filter="cocktail">Cocktail</li> 
@@ -155,6 +155,7 @@
                     <p>Rossa con verdure alla griglia</p>
                     <p>Prezzo: &euro;10.00</p>
                 </div>
+                 
                 <div class="itemBox" data-item="crostini">
                     <h3>Fornarina al crudo</h3>
                     <p>Sale, olio, rosmarino, prosciutto crudo</p>
@@ -268,7 +269,8 @@
                 <!-- Birre alla spina -->
                 <div class="itemBox" data-item="birrespina">
                     <h3>Harp (5%)</h3>
-                    <p>Piccola/Media/Boccale/Caraffa</p>
+                    <p>Piccola&euro; 4.00
+<p>/Media/Boccale/Caraffa</p>
                     <p>Prezzo: &euro;4.00/&euro;5.50/&euro;11.00/&euro;18.00</p>
                 </div>
                 <div class="itemBox" data-item="birrespina">
