--- a/menu/menu.html
+++ b/menu/menu.html
@@ -269,9 +269,7 @@
                 <!-- Birre alla spina -->
                 <div class="itemBox" data-item="birrespina">
                     <h3>Harp (5%)</h3>
-                    <p>Piccola&euro; 4.00
-<p>/Media/Boccale/Caraffa</p>
-                    <p>Prezzo: &euro;4.00/&euro;5.50/&euro;11.00/&euro;18.00</p>
+                    <p>Piccola &euro; 4.00 <br> Media &euro; 6.00 <br>Boccale &euro; 12.00<br>Caraffa &euro; 18
                 </div>
                 <div class="itemBox" data-item="birrespina">
                     <h3>Dolomiti (5.4%)</h3>
