--- a/menu/menu.html
+++ b/menu/menu.html
@@ -270,20 +270,21 @@
                 <div class="itemBox" data-item="birrespina">
                     <h3>Harp (5%)</h3>
                     <p>Piccola &euro; 4.00 <br> Media &euro; 6.00 <br>Boccale &euro; 12.00<br>Caraffa &euro; 18
-                </div>
-                <div class="itemBox" data-item="birrespina">
+                </div> 
+<!--            <div class="itemBox" data-item="birrespina">
                     <h3>Dolomiti (5.4%)</h3>
                     <p>Piccola/Media/Boccale/Caraffa</p>
                     <p>Prezzo: &euro;4.00/&euro;6.00/&euro;12.00/&euro;18.00</p>
                 </div>
+-->
                 <div class="itemBox" data-item="birrespina">
                     <h3>Tennet's super (9%)</h3>
                     <p>Piccola/Media/Boccale/Caraffa</p>
                     <p>Prezzo: &euro;4.00/&euro;6.00/&euro;12.00/&euro;18.00</p>
                 </div>
                 <div class="itemBox" data-item="birrespina">
-                    <h3>London Pride (4.7%)</h3>
-                    <p>Piccola/Media/Boccale/Caraffa</p>
+                    <h3>Marzen (5.8%)</h3>
+                    <p>Piccola &euro; 4 <br> Media &euro; 6,5 <br>Boccale &euro; 13.00 <br> Caraffa &euro; 19.50</p>
                     <p>Prezzo: &euro;4.00/&euro;6.50/&euro;13.00/&euro;18.50</p>
                 </div>
                 <div class="itemBox" data-item="birrespina">
