--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                   </button>
                   <div class="pannel">
                     <p>
-                      Siamo aperti tutti i giorni dalle 12:00 alle 23:00.
+		      Siamo aperti tutti i giorni dalle 12:00 alle 23:00.<br>
+                      Lunedì: 19-23<br>
+                      Martedì: 19-23<br>
+                      ...
                     </p>
                   </div>
                 </div>
