--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="content">
                 <p>
-                  Malt & Hops &egrave; nato dalla passione per la buona cucina e l'amore per la cultura nerd.
+                  Malt & Hops &egrave; nato dallal passione per la buona cucina e l'amore per la cultura nerd.
                   Situato nel cuore di Bologna, offriamo un ambiente accogliente dove gustare piatti italiani autentici e birre artigianali di alta qualit&agrave;.
                   Il nostro ristorante &egrave; il luogo ideale per famiglie, amici e appassionati che cercano un'esperienza culinaria unica. 
                   Con serate a tema e un'atmosfera solare, ci impegniamo a rendere ogni visita speciale.
@@ -96,7 +96,7 @@
                   </button>
                   <div class="pannel">
                     <p>
-		      Siamo aperti tutti i giorni dalle 12:00 alle 23:00.<br>
+                      Siamo aperti tutti i giorni dalle 12:00 alle 23:00.<br>
                       Lunedì: 19-23<br>
                       Martedì: 19-23<br>
                       ...
